@startuml Bank

class BankKonto{
    #minimumSaldo : float
    #eier : Eier
    #kontonummer : str
    #saldo : float = 0
    +visEierInfo()
    +visKontoInfo()
    +settInnPenger(penger : float) -> bool
    +taUtPenger(penger : float) -> bool
    #transaksjonFunksjonalitet(penger : float) -> bool
}
class BSUKonto{
    -maksPengerInnskudd : float
    +gjennværendeInskudd()
}
class SpareKonto{
    -maksGangerUttak : float
    +gjennværendeUttak()
}
class Eier{
    #fornavn : str
    #etternavn : str
    #telefonnummer : int
    +visInfo()
    +fulltNavn()
}   

SpareKonto -up-|> BankKonto
BSUKonto -up-|> BankKonto
Eier "1, 2,..." *-left-* "1" BankKonto


@enduml